Fix nav-list misalignment

--- a/css/app.css
+++ b/css/app.css
@@ -93,7 +93,7 @@ nav .social-icons {
 }
 
 .nav-list {
-  margin: 60% 10px 5px;
+  margin: 40vh 10px 5px;
   vertical-align: middle;
 }
 
@@ -329,9 +329,6 @@ address a {
 }
 
 @media screen and (min-width: 960px) {
-  .nav-list {
-    margin: 40vh auto 5px;
-  }
   #hamburger {
     right: 30px;
   }
